@@ -1,4 +1,5 @@
 2016-09-15 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * fixed incompatibility with puppet 2.7 (execpipe)
   * release 0.0.10
   * fixed incompatibilities with ruby 1.8
 2016-05-19 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
